--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/dummy"]
   path = test/dummy
-  url = git@github.com:work-design/dummy.git
+  url = https://github.com/work-design/dummy.git
